syntax = "proto3";

option go_package = "v1";
option java_package = "io.stackrox.proto.api.v1";

import weak "google/api/annotations.proto";
import "storage/integration_health.proto";
import "api/v1/empty.proto";

package v1;

message GetIntegrationHealthResponse {
    repeated storage.IntegrationHealth integrationHealth = 1;
}

service IntegrationHealthService {

    rpc GetRegistriesAndScanners(Empty) returns (GetIntegrationHealthResponse) {
        option (google.api.http) = {
            get: "/v1/integrationhealth/imageintegrations"
        };
    }

    rpc GetNotifierPlugins(Empty) returns (GetIntegrationHealthResponse) {
        option (google.api.http) = {
            get: "/v1/integrationhealth/notifiers"
        };
    }

    rpc GetBackupPlugins(Empty) returns (GetIntegrationHealthResponse) {
        option (google.api.http) = {
            get: "/v1/integrationhealth/externalbackups"
        };
    }
}
